Added introduction docs

--- a/PYCRASH-CHAPTER3-EXERCISE.ipynb
+++ b/PYCRASH-CHAPTER3-EXERCISE.ipynb
@@ -15,10 +15,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Person A, you're invited to dinner at 7pm!\n",
+      "Hey Person B, you're invited to dinner at 7pm!\n",
+      "Hey Person C, you're invited to dinner at 7pm!\n"
+     ]
+    }
+   ],
+   "source": [
+    "guests = [\"Person A\", \"Person B\", \"Person C\"]\n",
+    "for guest in guests:\n",
+    "    print(\"Hey {}, you're invited to dinner at 7pm!\".format(guest))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,10 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Person A', 'Person B', 'Person C']\n",
+      "['Person A', 'Person Z', 'Person C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(guests)\n",
+    "guests.remove(\"Person B\")\n",
+    "guests.insert(1, \"Person Z\")\n",
+    "print(guests)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -65,10 +93,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey Person Y, dinner at 7pm!\n",
+      "Hey Person A, dinner at 7pm!\n",
+      "Hey Person W, dinner at 7pm!\n",
+      "Hey Person Z, dinner at 7pm!\n",
+      "Hey Person C, dinner at 7pm!\n",
+      "Hey Me, dinner at 7pm!\n"
+     ]
+    }
+   ],
+   "source": [
+    "guests.insert(0, \"Person Y\")\n",
+    "guests.insert(len(guests)//2, \"Person W\")\n",
+    "\n",
+    "guests.append(\"Me\")\n",
+    "for guest in guests:\n",
+    "    print(\"Hey {}, dinner at 7pm!\".format(guest))"
+   ]
   }
  ],
  "metadata": {
@@ -87,9 +135,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
