--- a/PYCRASH-CHAPTER4-EXERCISE.ipynb
+++ b/PYCRASH-CHAPTER4-EXERCISE.ipynb
@@ -18,10 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['salami', 'schinken', 'margherita']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_pizzas = [\"salami\", \"schinken\", \"margherita\"]\n",
+    "print(my_pizzas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -40,10 +51,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "friend_pizzas = my_pizzas.copy()\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,7 +99,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -100,9 +113,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
